--- a/css/site.css
+++ b/css/site.css
@@ -7,8 +7,8 @@ body {
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
     text-align:center;
-    width:100px;
-    height:100px;
+    width:80%;
+    height:600px;
 }
 
 #box {
